--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 #github_username:  jekyll
 repository: bikuluki/ghp
 
-remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+#remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 
 # Build settings
 markdown: kramdown
