--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,22 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+GFM:
+  input: GFM
+  toc:
+    min_level: 2
+    max_level: 5
+plugins:
+  - jekyll-feed
+  - jekyll-redirect-from
+  - jekyll-titles-from-headings
+  - jemoji
+
+readme_index:
+  enabled:          true
+  remove_originals: false
+  with_frontmatter: true
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
