--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,8 +30,7 @@ jobs:
           echo "--- Current hash: $(git rev-parse HEAD)"
           if [[ "$(basename $(pwd))" != "ghp" ]]; then
             git config user.name 'github'; git config user.email 'noreply@github.com'
-            echo "base_pwd: $(basename $(pwd))"
-            rm -rf ghp 
+            echo "base_pwd: $(basename $(pwd))"; rm -rf ghp 
             wget https://github.com/bikuluki/ghp/tarball/main -O - | tar -xz --one-top-level=ghp --strip-components=1;
             ghpArr=( "Gemfile" "_config.yml" "_includes" "_layouts" "favicon.ico" )
             for item in ${ghpArr[@]}; do 
