jekyll-gh-pages.yml

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,15 +32,6 @@ jobs:
             git config user.name 'github'; git config user.email 'noreply@github.com'
             echo "- base_pwd: $(basename $(pwd))"; rm -rf ghp 
             wget https://github.com/bikuluki/ghp/tarball/main -O - | tar -xz --one-top-level=ghp --strip-components=1;
-            ghpArr=( "Gemfile" "_config.yml" "_includes" "_layouts" "favicon.ico" )
-            for item in ${ghpArr[@]}; do 
-              if [[ -f ghp/$item ]]; then
-                rm -rf $item
-                cp -r ghp/$item .
-                echo "- deleted and copied $item"
-              else echo "- ghp/$item not found"; fi
-            done
-            if [[ -n $(git status --short) ]]; then echo "--- Updated ghp"; fi
             if [[ ! -d ".github/workflows" ]]; then
               mkdir ".github/workflows"
               echo "- Created .github/workflows"
@@ -52,11 +43,24 @@ jobs:
               cp ghp/.github/workflows/ghp.yml .github/workflows
               git add .github
               git commit -am 'Adding ghp.yml'
-              git push
               echo '- Added ghp.yml'
             fi
-
-            echo "--- Updated hash: $(git rev-parse HEAD)"
+            # Update core files
+            ghpArr=( "Gemfile" "_config.yml" "favicon.ico" )
+            for item in ${ghpArr[@]}; do 
+              if [[ -f ghp/$item ]]; then
+                cp -uf ghp/$item . && git commit $item -m "$item" && echo "- Updated $item"
+              fi
+            done
+            if [[ -n $(git status --short) ]]; then 
+              echo "- Git: $(git status -s)"
+              git push
+              echo "--- Updated hash: $(git rev-parse HEAD)"
+            fi
+            ghpArr=( "_includes" "_layouts" "favicon.ico" )
+            for item in ${ghpArr[@]}; do 
+              cp -urf ghp/$item . && echo "- Copied $item"
+            done
           fi
 
       - name: Setup Pages
