jekyll-gh-pages.yml

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: copy GHP configs
         run: | 
+          echo 'Running bikuluki ghp.yml'
           echo "--- Current hash: $(git rev-parse HEAD)"
           if [[ "$(basename $(pwd))" != "ghp" ]]; then
             git config user.name 'github'; git config user.email 'noreply@github.com'
