jekyll-gh-pages.yml

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -52,7 +52,7 @@ jobs:
               git add .github
               git commit -am 'Adding ghp.yml'
               echo '- Added ghp.yml'
-              git push
+              git push -u origin main
               echo "--- Updated hash: $(git rev-parse HEAD)"
             fi
 
