--- a/.github/workflows/ghp.yml
+++ b/.github/workflows/ghp.yml
@@ -43,10 +43,10 @@ jobs:
 
             bikuluki='https://raw.githubusercontent.com/bikuluki/ghp/main/'
             echo "$bikuluki/.github/workflows/ghp.yml"
-            curl $bikuluki/.github/workflows/ghp.yml > .github/workflows/ghp.yml 
-            curl $bikuluki/favicon.ico > favicon.ico
-            curl $bikuluki/Gemfile     > Gemfile
-            curl $bikuluki/_config.yml > _config.yml
+            curl "$bikuluki/.github/workflows/ghp.yml" > .github/workflows/ghp.yml 
+            curl "$bikuluki/favicon.ico" > favicon.ico
+            curl "$bikuluki/Gemfile"     > Gemfile
+            curl "$bikuluki/_config.yml" > _config.yml
             if [[ -n $(git status --short) ]]; then 
               echo "- git status: $(git status -s)"
               git add .
