--- a/.github/workflows/ghp.yml
+++ b/.github/workflows/ghp.yml
@@ -27,23 +27,24 @@ jobs:
 
       - name: copy GHP configs
         run: | 
-          echo "--- Current hash: $(git rev-parse HEAD)"
+          echo "*** Current hash: $(git rev-parse HEAD) \n"
           if [[ "$(basename $(pwd))" != "ghp" ]]; then
             echo 'Running bikuluki ghp.yml'
             git config user.name 'github-actions'; git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
-            echo "- base_pwd: $(basename $(pwd))"; rm -rf ghp 
+            echo "* base_pwd: $(basename $(pwd)) \n"; rm -rf ghp 
 
             wget https://github.com/bikuluki/ghp/tarball/main -O - | tar -xz --one-top-level=ghp --strip-components=1;
             ghpArr=( "Gemfile" "_config.yml" "favicon.ico" "_includes" "_layouts" )
             for item in ${ghpArr[@]}; do 
-              if [[ -d "ghp/$item" ]]; then cp -urf ghp/$item . && echo "- Copied $item"; fi
+              if [[ -d "ghp/$item" ]]; then cp -urf ghp/$item . && echo "* Copied $item \n"; fi
             done
+            rm -rf ghp && echo "* rm -rf ghp \n"
             if [[ -n $(git status --short) ]]; then 
-              echo "- git status: $(git status -s)"
+              echo "* git status: $(git status -s) \n"
               git add .
               git commit -am 'Updating ghp'
               git push -u origin main
-              echo "--- Updated hash: $(git rev-parse HEAD)"
+              echo "*** Updated hash: $(git rev-parse HEAD) \n"
             fi
 
           fi
