--- a/.github/workflows/ghp.yml
+++ b/.github/workflows/ghp.yml
@@ -36,7 +36,7 @@ jobs:
             wget https://github.com/bikuluki/ghp/tarball/main -O - | tar -xz --one-top-level=ghp --strip-components=1;
             ghpArr=( "Gemfile" "_config.yml" "favicon.ico" "_includes" "_layouts" )
             for item in ${ghpArr[@]}; do 
-              if [[ -d "ghp/$item" ]]; then cp -urf ghp/$item . && echo "* Copied $item \n"; fi
+              cp -urf ghp/$item . && echo "* Copied $item \n"
             done
             rm -rf ghp && echo "* rm -rf ghp \n"
             if [[ -n $(git status --short) ]]; then 
