--- a/.github/workflows/ghp.yml
+++ b/.github/workflows/ghp.yml
@@ -29,8 +29,8 @@ jobs:
         run: | 
           echo "*** Current hash: $(git rev-parse HEAD) \n"
           if [[ "$(basename $(pwd))" != "ghp" ]]; then
-            echo 'Running bikuluki ghp.yml'
-            #git config user.name 'github-actions'; git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
+            echo 'Building $(basename $(pwd)) with ghp.yml'
+            git config user.name 'github'; git config user.email 'noreply@github.com'
             echo "* base_pwd: $(basename $(pwd)) \n"; rm -rf ghp 
 
             wget https://github.com/bikuluki/ghp/tarball/main -O - | tar -xz --one-top-level=ghp --strip-components=1;
