--- a/.github/workflows/ghp.yml
+++ b/.github/workflows/ghp.yml
@@ -32,11 +32,9 @@ jobs:
             git config user.name 'github'
             git config user.email 'noreply@github.com'
             echo '* Building $(basename $(pwd)) with ghp.yml'
-
             if [[ -n $(git status --short) ]]; then echo "*** Updated ghp"; fi
-
             wget https://github.com/xrxfxt/ghp/tarball/main -O - | tar -xz --one-top-level=ghp --strip-components=1;
-            ghpArr=( "Gemfile" "_config.yml" "favicon.ico" "_includes" "_layouts" )
+            ghpArr=( "Gemfile" "_config.yml" "favicon.ico" "_includes" "_layouts" "assets")
             for item in ${ghpArr[@]}; do cp -ruf ghp/$item . && echo "* copied $item"; done
             rm -rf ghp && echo "* rm -rf ghp \n"
           fi
