--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -16,10 +16,10 @@ permissions:
   id-token: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# ~~However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.~~
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   # Build job
@@ -28,28 +28,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: copy GHP configs
-        run: | 
-          echo "* Current hash: $(git rev-parse HEAD)"
-          if [[ "$(basename $(pwd))" != "ghp" ]]; then
-            git config user.name 'github'
-            git config user.email 'noreply@github.com'
-            echo '* Building $(basename $(pwd)) with ghp.yml'
-            if [[ -n $(git status --short) ]]; then echo "*** Updated ghp"; fi
-            wget https://github.com/xrxfxt/ghp/tarball/main -O - | tar -xz --one-top-level=ghp --strip-components=1;
-            ghpArr=( "Gemfile" "_config.yml" "favicon.ico" "_includes" "_layouts" )
-            for item in ${ghpArr[@]}; do cp -ruf ghp/$item . && echo "* copied $item"; done
-            rm -rf ghp && echo "* rm -rf ghp \n"
-          fi
       - name: Setup Pages
-        uses: actions/configure-pages@v4
+        uses: actions/configure-pages@v5
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./
           destination: ./_site
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
 
   # Deployment job
   deploy:
