--- a/.github/workflows/ghp.yml
+++ b/.github/workflows/ghp.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: copy GHP configs
+      - name: copy configs from /ghp
         run: | 
           echo "* Current hash: $(git rev-parse HEAD)"
           if [[ "$(basename $(pwd))" != "ghp" ]]; then
