--- a/.github/workflows/ghp.yml
+++ b/.github/workflows/ghp.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: copy configs from /ghp
+      - name: copy configs from ghp
         run: | 
           echo "* Current hash: $(git rev-parse HEAD)"
           if [[ "$(basename $(pwd))" != "ghp" ]]; then
@@ -44,7 +44,7 @@ jobs:
           source: ./
           destination: ./_site
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v2
   # Deployment job
   deploy:
     environment:
